[gd_scene load_steps=4 format=3 uid="uid://cisehedus3u2n"]

[ext_resource type="Script" path="res://scripts/UI/dialogue/textbox_response.gd" id="1_ophv7"]
[ext_resource type="Theme" uid="uid://br181ppxwwvsi" path="res://assets/UI/dialogue/dialogue_response_theme.tres" id="2_aigip"]
[ext_resource type="PackedScene" uid="uid://b71vm5sbs8ief" path="res://scenes/UI/dialogue/dialogue_label.tscn" id="3_rguuu"]

[node name="TextboxCanvas" type="CanvasLayer"]
layer = 2
script = ExtResource("1_ophv7")

[node name="TextboxMargin" type="MarginContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 68.0
offset_top = 53.0
offset_right = 852.0
offset_bottom = 272.0
grow_vertical = 2
theme = ExtResource("2_aigip")

[node name="TextboxPanel" type="PanelContainer" parent="TextboxMargin"]
layout_mode = 2

[node name="TextboxVbox" type="VBoxContainer" parent="TextboxMargin/TextboxPanel"]
layout_mode = 2

[node name="DialogueLabel" parent="TextboxMargin/TextboxPanel/TextboxVbox" instance=ExtResource("3_rguuu")]
layout_mode = 2
focus_mode = 2
selection_enabled = true

[node name="LetterDisplayTimer" type="Timer" parent="."]
